<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dark"
    tools:context="com.bulgaria.a_arshinkov.hangman.MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="false"
        android:layout_marginTop="37dp"
        android:text="@string/start_title"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:orientation="vertical">

        <Button
            android:id="@+id/singlePlButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:padding="20dp"
            android:text="@string/single_player" />

        <Button
            android:id="@+id/multiPlButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:padding="20dp"
            android:text="@string/multi_player" />

        <Button
            android:id="@+id/addWordToDBBUtton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:padding="20dp"
            android:text="@string/add_word" />
    </LinearLayout>
</RelativeLayout>

